[tool.poetry]
name = "test-sib"
version = "0.1.0"
description = ""
authors = ["desert71 <amkazennov99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
